examples improvements