@@ -2,17 +2,16 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class MergingLists {
     public static void main(String[] args) {
         Scanner sc = new Scanner(System.in);
 
         List<Integer> first = Arrays.stream(sc.nextLine().split(" "))
-                .map(Integer::parseInt).collect(Collectors.toList());
+                .map(Integer::parseInt).toList();
 
         List<Integer> second = Arrays.stream(sc.nextLine().split(" "))
-                .map(Integer::parseInt).collect(Collectors.toList());
+                .map(Integer::parseInt).toList();
 
         List<Integer> result = new ArrayList<>();
 
